Integrate LoadEstimator into Base-KV